--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<p> Hello, its me :) </p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Plenti</title>
+    <meta name="description" content="Nayelz's site">
+    <meta name="charset" content="UTF-8">
+    <meta name="keywords" content="Nayelz">
+  </head>
+  <body style="background-color:orange">
+    <p> Hello, its me :) </p>
+  </body>
+</html>
+
+
