--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="charset" content="UTF-8">
     <meta name="keywords" content="Nayelz">
   </head>
-  <body style="background-color:orange">
+  <body style="background-color:#F7E1F7">
     <p> Hello, its me :) </p>
   </body>
 </html>
