--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <meta name="keywords" content="Nayelz">
   </head>
   <body style="background-color:#F7E1F7">
-    <p> Hello, its me :) </p>
+    <p style="color:red">Hello, its me :) </p>
+    <p>Stuff</p>
+    <p>More stuff</p>
+    <ul>
+      <li>one</li>
+      <li>two</li>
+      <li>three</li>
+    </ul>
   </body>
 </html>
 
