--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="keywords" content="Nayelz">
   </head>
   <body style="background-color:#F7E1F7">
-    <p style="color:red">Hello, its me :) </p>
-    <p>Stuff</p>
-    <p>More stuff</p>
+    <p>Hello, its me :) </p>
+    <p></p>
+    <p></p>
     <ul>
-      <li>one</li>
-      <li>two</li>
-      <li>three</li>
+      <li></li>
+      <li></li>
+      <li></li>
     </ul>
   </body>
 </html>
