--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="charset" content="UTF-8">
     <meta name="keywords" content="Nayelz">
   </head>
-  <body style="background-color:#F7E1F7">
+  <body style="background-image:URL('plenti.jpeg')">
     <p>Hello, its me :) </p>
     <p></p>
     <p></p>
@@ -15,7 +15,6 @@
       <li></li>
       <li></li>
     </ul>
-    <img src="plenti.jpeg">
   </body>
 </html>
 
