--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Nayelz">
   </head>
   <body style="background-image:URL('plenti.jpeg')">
-    <p>Welcome to Plenti a place where the Luh's are supported</p>
+    <p> "Welcome to Plenti a place where the Luh's are supported"</p>
     <p></p>
     <p></p>
     <ul>
