--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="description" content="Nayelz's site">
     <meta name="charset" content="UTF-8">
     <meta name="keywords" content="Nayelz">
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
   </head>
   <body style="background-image:URL('plenti.jpeg')">
     <p> "Welcome to Plenti a place where the Luh's are supported"</p>
